--- a/src/pages/Loading/loading.css
+++ b/src/pages/Loading/loading.css
@@ -1,6 +1,8 @@
-body{
-    height: 100vh;
+.loading {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    min-width: 100vw;
 }
