--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -74,7 +74,6 @@
 .rock3 {
   position: absolute;
   width: 10%;
-  margin-right: 0;
-  bottom: 0;
-  resize: contain;
+  right: 10%;
+  bottom: 5%;
 }
