--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -80,7 +80,7 @@
   border-radius: 16px;
 }
 
-.btn:hover {
+#shareInnovationBtn:hover {
   box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.4),
     3px 3px 6px rgba(105, 129, 162, 0.2);
 }
