--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,4 +1,4 @@
-.root {
+.rootContainer {
   background-image: url("../../assets/about-bg.svg");
   background-size: contain;
   background-repeat: no-repeat;
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   height: 100vh;
+  width: 100vw;
   position: relative;
 }
 
