--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -88,16 +88,14 @@
 #signup {
   text-align: center;
   line-height: 100%;
-  font-size: 60px;
+  font-size: 80px;
   letter-spacing: 0.4em;
   text-transform: uppercase;
 }
 
-#form {
+#formContainer {
   position: absolute;
-  width: 60%;
-  height: 50%;
-
+  width: 50%;
   background: rgba(255, 255, 255, 0.49);
   border-radius: 16px;
   backdrop-filter: blur(6px);
@@ -108,19 +106,87 @@
   align-items: center;
 }
 
+#close {
+  position: absolute;
+  width: 2%;
+  margin: 2%;
+  height: auto;
+  right: 0;
+  top: 0;
+}
+
+#formControl {
+  width: 100%;
+  justify-items: baseline;
+  display: flex;
+  margin-bottom: 2%;
+  flex-direction: column;
+}
+
 #formTitle {
   text-align: center;
+  background: linear-gradient(
+    75.27deg,
+    #7c7d7f -24.99%,
+    #c3c4c6 14.72%,
+    #9ea0a3 57.04%,
+    #cbccce 100%
+  );
+  font-size: 60px;
+  margin: 0 auto;
+  letter-spacing: 10px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
 
 #additionalInfoContainer {
-  padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0 2%;
+}
+
+.formInput {
+  min-width: 0;
+  min-height: 0;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+
+  padding-top: 2%;
+  padding-bottom: 2%;
+  outline: rgba(0, 0, 0, 0.15);
+}
+
+#projectDescriptionInput {
+  resize: none;
+  margin: 0 2%;
+  font-family: inherit;
+  padding: 2% 2%;
 }
 
 .horizontalInput {
-  /* margin-left: 10px;
-  margin-right: 10px; */
-  margin: 0 auto;
+  padding-left: 2%;
+  width: 30%;
+}
+
+.verticalInput {
+  padding: 2% 2%;
+  margin: 0 2%;
+}
+
+#sendBtn {
+  background: #ffd953;
+  border-radius: 16px;
+  padding: 2%;
+  margin: 0 2%;
+  font-weight: bold;
+  letter-spacing: 2px;
+  border: none;
+}
+
+#sendBtn:hover {
+  box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.4),
+    3px 3px 6px rgba(105, 129, 162, 0.2);
 }
