--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -95,16 +95,46 @@
 
 #rock1 {
   width: 20vw;
+  animation: rock1Animation 4s infinite linear alternate;
 }
 
 #rock2 {
-  width: 10%;
+  width: 8%;
+  animation: rock2Animation 4s infinite linear both;
+  margin-left: 10%;
 }
 
 #rock3 {
   display: block;
-  transform: translate(5vw);
   width: 10vw;
   height: 10vw;
   align-self: flex-end;
+  animation: rock3Animation 2s infinite linear both;
+}
+
+@keyframes rock1Animation {
+  from {
+    transform: translate(-10%, -15%);
+  }
+  to {
+    transform: translateX(10%, 15%);
+  }
+}
+
+@keyframes rock2Animation {
+  from {
+    transform: rotate(0deg) translate(-10%, -20%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-10%, -20%) rotate(-360deg);
+  }
+}
+
+@keyframes rock3Animation {
+  from {
+    transform: rotate(0deg) translate(-0%, -10%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-0%, -10%) rotate(-360deg);
+  }
 }
