--- a/src/pages/Investor/Investor.css
+++ b/src/pages/Investor/Investor.css
@@ -13,6 +13,45 @@
   align-items: center;
 }
 
+#rocksLayer {
+  z-index: 2;
+  position: absolute;
+}
+
+#rock4 {
+  width: 20%;
+  animation: rock4Animation 4s infinite linear both;
+}
+
+@keyframes rock4Animation {
+  from {
+    transform: rotate(0deg) translate(-0%, -10%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-0%, -10%) rotate(-360deg);
+  }
+}
+
+#rock5 {
+  position: absolute;
+  width: 10%;
+  right: 0;
+  margin-right: -5%;
+
+  animation: rock5Animation 4s infinite linear alternate;
+}
+
+@keyframes rock5Animation {
+  from {
+    transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg)
+      scale(1);
+  }
+  to {
+    transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg)
+      scale(1.3);
+  }
+}
+
 #infoContainer {
   display: flex;
   z-index: 2;
