[FEAT] update Ids

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,4 +1,4 @@
-.rootContainer {
+.about-root-container {
   background-image: url("../../assets/about-bg.svg");
   background-size: contain;
   background-repeat: no-repeat;
