--- a/src/pages/Investor/Investor.css
+++ b/src/pages/Investor/Investor.css
@@ -7,19 +7,22 @@
   bottom: 0;
   left: 0;
   width: 100vw;
-
-  display: flex;
-  justify-content: start;
-  align-items: center;
 }
 
 #investor-rocks-layer {
   z-index: 2;
+
   position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 #investor-rock4 {
   width: 20%;
+  margin-left: -10%;
+  margin-top: -10%;
   animation: investor-rock4-animation 4s infinite linear both;
 }
 
@@ -33,10 +36,10 @@
 }
 
 #investor-rock5 {
-  position: absolute;
   width: 10%;
-  right: 0;
-  margin-right: -5%;
+  height: 10%;
+  margin-right: -10%;
+  margin-top: -5%;
 
   animation: investor-rock5-animation 4s infinite linear alternate;
 }
@@ -53,17 +56,20 @@
 }
 
 #infoContainer {
-  display: flex;
+  position: absolute;
   z-index: 2;
-  justify-content: start;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 #titleText {
+  margin-top: 2%;
   font-size: xx-large;
-  margin-top: 4%;
-  margin-left: 4%;
+  text-align: center;
 }
 
 #subtitleText {
@@ -77,7 +83,7 @@
 
 #largeTitle {
   position: absolute;
-  bottom: 2%;
+  bottom: 0;
   margin: 0 auto;
 
   font-style: normal;
