--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -92,18 +92,50 @@
   align-items: center;
 }
 
-#rock1 {
+#about-rock1 {
   width: 20vw;
+  animation: about-rock1-animation 4s infinite linear alternate;
 }
 
-#rock2 {
+#about-rock2 {
   width: 10%;
+  width: 8%;
+  animation: about-rock2-animation 4s infinite linear both;
+  margin-left: 10%;
 }
 
-#rock3 {
+#about-rock3 {
   display: block;
   transform: translate(5vw);
   width: 10vw;
   height: 10vw;
   align-self: flex-end;
+  animation: about-rock3-animation 4s infinite linear alternate;
+}
+
+@keyframes about-rock1-animation {
+  from {
+    transform: translate(-10%, -15%);
+  }
+  to {
+    transform: translateX(10%, 15%);
+  }
+}
+
+@keyframes about-rock2-animation {
+  from {
+    transform: rotate(0deg) translate(-10%, -20%) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translate(-10%, -20%) rotate(-360deg);
+  }
+}
+
+@keyframes about-rock3-animation {
+  from {
+    transform: rotate(360deg) translate(-0%, -10%) scale(0.9) rotate(-360deg);
+  }
+  to {
+    transform: rotate(0deg) translate(-0%, -10%) scale(1.1) rotate(0deg);
+  }
 }
