--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,13 +1,18 @@
 .about-root-container {
-  background-image: url("../../assets/about-bg.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+
   height: 100vh;
+  width: 100vw;
   position: relative;
+
+  background-image: url("../../assets/about-bg.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  /* display: inline-block; */
 }
 
 #backgroundContainer {
@@ -61,7 +66,8 @@
 #subtitleContainer {
   width: 30%;
   transform: translateX(50%);
-  position: relative;
+
+  white-space: normal;
 }
 
 #subtitle {
