--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -83,8 +83,9 @@
 
 #signUpWrapper {
   position: absolute;
-  bottom: 10vh;
+  bottom: 5vh;
   z-index: 2;
+  margin-left: 5vw;
 }
 
 #signup {
@@ -93,6 +94,10 @@
   font-size: 80px;
   letter-spacing: 0.4em;
   text-transform: uppercase;
+  text-decoration: underline;
+  /* font-family: SFUFuturaRegular; */
+  /* text-decoration-color: red; */
+  font-style: normal;
 }
 
 #formParentLayout {
@@ -200,4 +205,22 @@
 #sendBtn:hover {
   box-shadow: -4px -4px 4px rgba(255, 255, 255, 0.4),
     3px 3px 6px rgba(105, 129, 162, 0.2);
+}
+
+@font-face {
+  font-family: "SFUFuturaBold";
+  src: local("SFUFuturaBold"),
+    url(../../assets/fonts/SFU/SFUFuturaBold.TTF) format("woff");
+}
+
+@font-face {
+  font-family: "SFUFuturaRegular";
+  src: local("SFUFuturaRegular"),
+    url(../../assets/fonts/SFU/SFUFuturaRegular.TTF) format("woff");
+}
+
+@font-face {
+  font-family: "MontserratRegular";
+  src: local("MontserratRegular"),
+    url(../../assets/fonts/Montserrat/Montserrat-Regular.ttf) format("woff");
 }
