--- a/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
+++ b/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
@@ -6,9 +6,9 @@
 }
 
 #intro-center-rock-background {
-  background-image: url("../../assets/about-bg.svg");
+  /* background-image: url("../../assets/about-bg.svg");
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 
   position: absolute;
   top: 0;
@@ -28,7 +28,7 @@
   right: 0;
   margin: auto;
 
-  z-index: 0;
+  z-index: 1;
 }
 
 .zoomAboutPage {
@@ -39,6 +39,17 @@
 }
 
 #intro-video {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+
+#intro-video2 {
   position: absolute;
   width: 100%;
   left: 50%;
