--- a/src/pages/PageWrapper/PageWrapper.css
+++ b/src/pages/PageWrapper/PageWrapper.css
@@ -19,18 +19,17 @@
 
 @media screen and (max-width: 500px) {
   #page-wrapper-root {
-    width: 100vh;
+    width: 100vw;
 
     /* display: flex;
     flex-direction: row; */
 
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     white-space: nowrap;
   }
 
   .page-container {
-    /* display: inline-block; */
     width: 100vw;
     height: 100vh;
   }
