[FEAT] fix bugs

--- a/src/pages/PageWrapper/PageWrapper.css
+++ b/src/pages/PageWrapper/PageWrapper.css
@@ -9,6 +9,14 @@
     overflow-y: hidden;
     white-space: nowrap;
   }
+  #social-button {
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100vw;
+  }
 
   .page-container {
     display: inline-block;
