--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -9,7 +9,7 @@
     width: 100vw;
     position: relative;
 
-    background-image: url("../../assets/resources/pc/about-bg.svg");
+    background-image: url("../../assets/resources/pc/about-bg.png");
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -97,7 +97,7 @@
       3px 3px 6px rgba(105, 129, 162, 0.2);
   }
 
-  .footer {
+  #about-footer {
     display: flex;
 
     justify-content: space-between;
@@ -123,6 +123,7 @@
     height: 10vw;
     align-self: flex-end;
     animation: about-rock3-animation 4s infinite linear alternate;
+    z-index: 1000;
   }
 
   @keyframes about-rock1-animation {
