--- a/src/pages/Focus/focus.css
+++ b/src/pages/Focus/focus.css
@@ -5,6 +5,10 @@
   display: inline-block;
   overflow: hidden;
   position: relative;
+
+  background-image: url("../../assets/focus-bg.png");
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .titleFocus {
@@ -79,12 +83,6 @@
   transform: translateY(-20px);
   transition: 0.4s ease-out;
   width: 75%;
-}
-
-.socialButtonFocus {
-  position: absolute;
-  top: 0.1vh;
-  z-index: 2000;
 }
 
 @font-face {
