--- a/src/pages/Investor/Investor.css
+++ b/src/pages/Investor/Investor.css
@@ -48,17 +48,15 @@
   margin-right: -10%;
   margin-top: -5%;
 
-  animation: investor-rock5-animation 4s infinite linear alternate;
+  animation: investor-rock5-animation 6s infinite linear alternate;
 }
 
 @keyframes investor-rock5-animation {
   from {
-    transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg)
-      scale(1);
+    transform: translateY(-10%) rotate(0deg) translateX(0%) rotate(0deg);
   }
   to {
-    transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg)
-      scale(1.3);
+    transform: translateX(-20%) rotate(360deg) translateX(10%) rotate(-360deg);
   }
 }
 
@@ -73,17 +71,12 @@
   align-items: center;
 }
 
-.socialButtonSignUp {
-  position: absolute;
-  top: 0.1vh;
-  z-index: 2;
-}
-
 #titleText {
-  margin-top: -2%;
+  margin-top: 3%;
   font-size: xx-large;
   text-align: center;
   font-family: SFUFuturaBold;
+  letter-spacing: 0.4em;
 }
 
 #subtitleText {
@@ -92,6 +85,7 @@
   font-weight: 400;
   font-family: MontserratRegular;
   white-space: normal;
+  font-size: 80%;
   letter-spacing: -0.01em;
 }
 
@@ -134,7 +128,7 @@
 .carousel {
   text-align: center;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   width: 50%;
   /* margin: 10rem auto; */
   margin-right: 5%;
@@ -154,7 +148,6 @@
   opacity: 0.5;
 }
 
-
 .activeSlide {
   transform: scale(0.9);
   opacity: 1;
@@ -164,24 +157,28 @@
   animation: rotateY-anim 0.25s 5;
   transform-origin: center;
   transition: transform 300ms;
-  animation-timing-function: cubic-bezier(0,0,0.5,1);
+  animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
 }
 
 @keyframes rotateY-anim {
-	0% {
-		transform: rotateY(0deg);
-	}
+  0% {
+    transform: rotateY(0deg);
+  }
 
-	100% {
-		transform: rotateY(360deg);
-	}
+  100% {
+    transform: rotateY(360deg);
+  }
 }
 
 @-webkit-keyframes rotateY {
-  to { -webkit-transform: rotateY(0deg); }
+  to {
+    -webkit-transform: rotateY(0deg);
+  }
 }
 @keyframes rotateY {
-  to { transform: rotateY(306deg); }
+  to {
+    transform: rotateY(306deg);
+  }
 }
 
 .arrow {
