--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -36,12 +36,10 @@
 
   @keyframes rock5Animation {
     from {
-      transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg)
-        scale(1);
+      transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg);
     }
     to {
-      transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg)
-        scale(1.3);
+      transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg);
     }
   }
 
@@ -51,15 +49,15 @@
     position: absolute;
     width: 5%;
 
-    animation: rock6Animation 2s infinite linear both;
+    animation: rock6Animation 4s infinite linear both;
   }
 
   @keyframes rock6Animation {
     from {
-      transform: rotate(0deg) translateX(50%) rotate(0deg);
+      transform: rotate(0deg) translateX(10%) rotate(0deg);
     }
     to {
-      transform: rotate(360deg) translateX(50%) rotate(-360deg);
+      transform: rotate(360deg) translateX(10%) rotate(-360deg);
     }
   }
 
@@ -269,12 +267,10 @@
 
   @keyframes rock5Animation {
     from {
-      transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg)
-        scale(1);
+      transform: translateY(-20%) rotate(0deg) translateX(10%) rotate(0deg);
     }
     to {
-      transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg)
-        scale(1.3);
+      transform: translateX(-50%) rotate(360deg) translateX(10%) rotate(-360deg);
     }
   }
 
