--- a/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
+++ b/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
@@ -151,6 +151,7 @@
   margin-left: 58vw;
   font-style: normal;
   z-index: 2;
+  text-transform: uppercase;
 }
 
 .wrapButton {
@@ -159,7 +160,7 @@
 }
 
 #button {
-  font-family: MontserratRegular;
+  font-family: MontserratBold;
   z-index: 2;
   width: 8vw;
   height: 6vh;
@@ -171,9 +172,11 @@
   display: inline-block;
   border-radius: 15px;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 80%;
   font-weight: 700;
   font-style: normal;
+  letter-spacing: 0.195em;
+  text-transform: uppercase;
 }
 
 .rockLandingPage {
@@ -204,4 +207,10 @@
   font-family: "MontserratRegular";
   src: local("MontserratRegular"),
     url(../../assets/fonts/Montserrat/Montserrat-Regular.ttf) format("woff");
+}
+
+@font-face {
+  font-family: "MontserratBold";
+  src: local("MontserratBold"),
+    url(../../assets/fonts/Montserrat/Montserrat-Bold.ttf) format("woff");
 }
