--- a/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
+++ b/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
@@ -57,6 +57,17 @@
   z-index: 0;
 }
 
+#intro-video-zoom {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+
 #intro-video2 {
   position: absolute;
   width: 100%;
@@ -112,13 +123,10 @@
 }
 
 .title {
-  /* position: absolute; */
-  /* left: 0;
-  right: 0; */
-  z-index: 2;
+  z-index: 1000;
   text-align: center;
   width: 100vw;
-  margin-top: 25%;
+  margin-top: 27%;
   margin-bottom: 0;
   font-family: SFUFuturaBold;
   font-size: 15vh;
@@ -135,7 +143,6 @@
     3px 3px 33px rgba(105, 129, 162, 0.2);
   letter-spacing: 1.165em;
   display: inline-block;
-  /* -webkit-text-stroke: 1px black 60%; */
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #444444;
 }
@@ -145,18 +152,26 @@
 }
 
 .mainContent {
+  position: absolute;
+  top: 90%;
+  left: 4.5%;
   display: flex;
+  flex-direction: column;
   font-weight: 400;
   float: right;
   margin-left: 58vw;
   font-style: normal;
   z-index: 2;
   text-transform: uppercase;
+  margin-top: 1%;
+  margin-bottom: 50px;
 }
 
 .wrapButton {
+  /* position: absolute;
+  right: 60%; */
   display: flex;
-  margin-left: 58vw;
+  /* margin-left: 50vw; */
 }
 
 #button {
