--- a/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
+++ b/src/pages/IntroVideoLandingPage/introVideoLandingPage.css
@@ -46,7 +46,7 @@
   visibility: hidden;
 }
 
-#intro-video {
+#intro-video-start {
   position: absolute;
   width: 100%;
   left: 50%;
@@ -66,6 +66,17 @@
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: 0;
+}
+
+#intro-video-background {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
 }
 
 #intro-video2 {
