[UPDATE] add scroll horizontal

--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -87,6 +87,7 @@
     bottom: 5vh;
     z-index: 2;
     margin-left: 5vw;
+    margin-bottom: 5%;
   }
 
   #signup {
@@ -99,8 +100,20 @@
     font-family: SFUFuturaRegular;
     font-style: normal;
     text-decoration-skip-ink: none;
-    text-decoration-color: #000000 100%;
     margin-bottom: 0;
+    font-family: SFUFuturaRegular;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  background: linear-gradient(
+    75.27deg,
+    #7c7d7f -24.99%,
+    #c3c4c6 14.72%,
+    #9ea0a3 57.04%,
+    #cbccce 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
   }
 
   #sign-up-bottom-line{
