--- a/src/pages/Investor/Investor.css
+++ b/src/pages/Investor/Investor.css
@@ -14,6 +14,9 @@
 
   display: inline-block;
   position: relative;
+  background: #ededed;
+  background-size: contain;
+  background-repeat: no-repeat;;
 }
 
 #investor-rocks-layer {
