[UPDATE] fix UI

--- a/src/pages/Focus/focus.css
+++ b/src/pages/Focus/focus.css
@@ -9,6 +9,7 @@
   background-image: url("../../assets/focus-bg.png");
   background-size: contain;
   background-repeat: no-repeat;
+  background-color: transparent;
 }
 
 .titleFocus {
