--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -12,7 +12,7 @@
     background-image: url("../../assets/resources/pc/about-bg.png");
     background-size: contain;
     background-repeat: no-repeat;
-
+    background-color: transparent;
     /* display: inline-block; */
   }
 
@@ -77,8 +77,8 @@
 
   #subtitle {
     text-align: justify;
-    font-size: medium;
-    line-height: 100%;
+    font-size: 90%;
+    line-height: 130%;
   }
 
   #shareInnovationBtn {
