--- a/src/pages/Investor/Investor.css
+++ b/src/pages/Investor/Investor.css
@@ -15,8 +15,6 @@
   display: inline-block;
   position: relative;
   background: #ededed;
-  background-size: contain;
-  background-repeat: no-repeat;;
 }
 
 #investor-rocks-layer {
@@ -163,6 +161,10 @@
   animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
 }
 
+slick-arrow.slick-next::before {
+  display: none;
+}
+
 @keyframes rotateY-anim {
   0% {
     transform: rotateY(0deg);
@@ -184,30 +186,6 @@
   }
 }
 
-.arrow {
-  background-color: #fff;
-  position: absolute;
-  cursor: pointer;
-  z-index: 10;
-}
-
-.arrow svg {
-  transition: color 300ms;
-}
-
-.arrow svg:hover {
-  color: #68edff;
-}
-
-.next {
-  right: 0%;
-  top: 50%;
-}
-
-.prev {
-  left: 0%;
-  top: 50%;
-}
 
 @font-face {
   font-family: "SFUFuturaBold";
